@@ -17,3 +17,4 @@ Need to specify direct path to gpg program
 
 - ssh is available on default ubuntu image
 - .ssh folder is not configured, use action from marketplace to configure
+- Ansible is availbale in ubuntu base image
